@@ -1,6 +1,5 @@
 package us.poliscore.service;
 
-import java.io.File;
 import java.net.URI;
 import java.util.Arrays;
 import java.util.Comparator;
@@ -8,7 +7,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.StringUtils;
 
 import io.quarkus.logging.Log;
@@ -17,22 +15,16 @@ import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import lombok.SneakyThrows;
 import lombok.val;
-import us.poliscore.legiscan.view.LegiscanTextType;
-import us.poliscore.Environment;
-import us.poliscore.PoliscoreUtil;
 import us.poliscore.model.InterpretationOrigin;
-import us.poliscore.model.LegislativeNamespace;
-import us.poliscore.model.Persistable;
 import us.poliscore.model.TrackedIssue;
 import us.poliscore.model.bill.Bill;
 import us.poliscore.model.bill.BillInterpretation;
 import us.poliscore.model.bill.BillIssueStat;
 import us.poliscore.model.bill.BillText;
-import us.poliscore.model.bill.BillTextPublishVersion;
 import us.poliscore.model.bill.CongressionalBillType;
 import us.poliscore.model.press.PressInterpretation;
-import us.poliscore.service.storage.DynamoDbPersistenceService;
 import us.poliscore.service.storage.LocalCachedS3Service;
+import us.poliscore.service.storage.ObjectStorageServiceIF;
 
 @ApplicationScoped
 @Priority(4)
@@ -42,9 +34,6 @@ public class BillService {
 	
 	@Inject
 	protected LegislatorService lService;
-	
-	@Inject
-	private DynamoDbPersistenceService ddb;
 	
 	@Inject
 	private GovernmentDataService data;
@@ -57,46 +46,29 @@ public class BillService {
 	
 	public void populatePressInterps(BillInterpretation interp)
 	{
-		var pressInterps = s3.query(PressInterpretation.class, interp.getBillId().replace(Bill.ID_CLASS_PREFIX + "/", ""));
-		
-//		pressInterps = pressInterps.stream().filter(i -> i.getBillId().equals(interp.getBillId()) && !InterpretationOrigin.POLISCORE.equals(i.getOrigin()) && !i.isNoInterp()).collect(Collectors.toList());
-		
-		pressInterps = pressInterps.stream()
-			    .filter(i -> {
-			        try {
-			            return i.getBillId().equals(interp.getBillId())
-			                && !InterpretationOrigin.POLISCORE.equals(i.getOrigin())
-			                && !i.isNoInterp();
-			        } catch (Exception e) {
-			            Log.warn("Skipping press interpretation due to error: " + i, e);
-			            return false; // skip this item if it errors
-			        }
-			    })
-			    .collect(Collectors.toList());
-
-		
-		interp.setPressInterps(pressInterps);
+		interp.setPressInterps(getPressInterps(interp.getBillId()).stream()
+				.map(this::trimForBillPayload)
+				.toList());
 	}
 
-	public void ddbPersist(Bill b, BillInterpretation interp)
+	public void persist(Bill b, BillInterpretation interp, ObjectStorageServiceIF store)
 	{
-		ddbPersist(b, interp, true);
+		persist(b, interp, store, true);
 	}
-	
-	public void ddbPersist(Bill b, BillInterpretation interp, boolean populateIssueStats)
+
+	public void persist(Bill b, BillInterpretation interp, ObjectStorageServiceIF store, boolean populateIssueStats)
+	{
+		applyInterpretation(b, interp);
+		store.put(b);
+	}
+
+	public void applyInterpretation(Bill b, BillInterpretation interp)
 	{
 		var billLastAction = b.getLastActionDate() == null || interp.getLastUpdate().isAfter(b.getLastActionDate().atStartOfDay()) ? interp.getLastUpdate() : b.getLastActionDate().atStartOfDay();
 		b.setLastUpdate(billLastAction);
 		
 		populatePressInterps(interp);
 		b.setInterpretation(interp);
-		ddb.put(b);
-		
-		if (populateIssueStats) {
-			for(TrackedIssue issue : TrackedIssue.values()) {
-				ddb.put(new BillIssueStat(issue, b.getImpact(issue), b));
-			}
-		}
 	}
 	
 	public List<PressInterpretation> getPressInterps(String billId) {
@@ -113,6 +85,26 @@ public class BillService {
 				.collect(Collectors.toList());
 		
 		return s3PressInterps;
+	}
+
+	private PressInterpretation trimForBillPayload(PressInterpretation interp) {
+		var copy = new PressInterpretation();
+		copy.setId(interp.getId());
+		copy.setBillId(interp.getBillId());
+		copy.setOrigin(interp.getOrigin());
+		copy.setMetadata(interp.getMetadata());
+		copy.setGenArticleTitle(interp.getGenArticleTitle());
+		copy.setShortExplain(interp.getShortExplain());
+//		copy.setLongExplain(interp.getLongExplain());
+		copy.setSentimentText(interp.getSentimentText());
+		copy.setAuthor(interp.getAuthor());
+		copy.setType(interp.getType());
+		copy.setConfidence(interp.getConfidence());
+		copy.setSentiment(interp.getSentiment());
+		copy.setNoInterp(interp.isNoInterp());
+		copy.setLastUpdate(interp.getLastUpdate());
+		copy.setStorageBucket(interp.getStorageBucket());
+		return copy;
 	}
 	
 	public void wipeAllPressInterps(Bill b)
